--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/willhemz/countdown-timer.web#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "countdown-js": "^1.0.2",
+    "date-countdown": "^1.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
